--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
-<h1>ShaneChu's HomePage</h1>It works.\n
+---
+layout: default
+title: my blog
+---
+
+<ul>
+　{% for post in site.posts %}
+　　<li>{{ post.date | date_to_string }} <a href="{{ site.baseurl }}{{ post.url }}">{{ post.title }}</a></li>
+　{% endfor %}
+</ul>
